# RaycastRenderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  RaycastRenderer.cpp  RaycastRenderer.h
maps/: BIG_SINGLE_ROOM.json  BOX.json  SINGLE_ROOM.json
src/: CMakeLists.txt  MapEditor.cpp  MapEditor.h  Raycast.cpp  Raycast.h  Raycaster.cpp  Raycaster.h  imgui_setting.h  main.cpp  map.cpp  map.h  player.cpp  player.h  point.cpp  point.h  ray.h  sector.cpp  sector.h  wall.cpp  wall.h
